Made error message more visible by adding fixed position and increasing font size.

--- a/frontend/styles/site.less
+++ b/frontend/styles/site.less
@@ -78,12 +78,20 @@ html,body {
 	position: relative;
 }
 #messages {
-    padding: 5px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
 }
 .message {
-    margin-top: 0.5em;
-    background-color: #fda;
-    padding: 5px;
+    background-color: #FAC6BD;
+    padding: 20px 30px;
+    font-size: 125%;
+    font-weight: 700;
+    @media (min-width: 640px) {
+        padding: 30px;
+        font-size: 150%;
+    }
 }
 .language-toggle {
     background-color: none;
@@ -316,7 +324,8 @@ li {
 
 .submit-form {
 	width: 100%;
-    margin-bottom: 10px;
+    margin: 20px 0 0;
+    overflow-y: auto;
     @media (min-width:1000px){
     	height: 60px;
     }
@@ -1214,6 +1223,7 @@ Service Form
 #service-form {
 	.row {
 		padding: 10px 0;
+        overflow-y: auto;
 		@media (min-width:0px) and (max-width: 639px) {
 			padding: 0;
 		}
